force-app/main/default/objects/ssot__BenefitSpecialty__dlm/fields/ssot__CareSpecialtyId__c.field-meta.xml
<CustomField>
    <fullName>ssot__CareSpecialtyId__c</fullName>
    <label>Care Specialty</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CareSpecialtyId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>