force-app/main/default/objects/ssot__BenefitSpecialty__dlm/fields/ssot__rel_1732853334097_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1732853334097_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BenefitSpecialty_CareSpecialtyId_map_rel</label>
    <referenceTo>ssot__CareSpecialty__dlm</referenceTo>
    <relationshipLabel>BenefitSpecialty_CareSpecialtyId_map_rel</relationshipLabel>
    <relationshipName>rel_1732853334097_end</relationshipName>
    <type>Lookup</type>
</CustomField>