force-app/main/default/objects/ssot__BenefitSpecialty__dlm/fields/ssot__rel_1732853346117_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1732853346117_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BenefitSpecialty_BenefitId_map_Benef_rel</label>
    <referenceTo>ssot__Benefit__dlm</referenceTo>
    <relationshipLabel>BenefitSpecialty_BenefitId_map_Benef_rel</relationshipLabel>
    <relationshipName>rel_1732853346117_end</relationshipName>
    <type>Lookup</type>
</CustomField>